# ChangeLog for app-emulation/libvirt
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.316 2013/08/31 10:14:07 ago Exp $

  31 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libvirt-1.1.1-r5.ebuild:
  Stable for amd64, wrt bug #483048

  30 Aug 2013; Doug Goldstein <cardoe@gentoo.org> -libvirt-1.1.1-r3.ebuild,
  -libvirt-1.1.1-r4.ebuild:
  Remove older versions

*libvirt-1.1.1-r5 (29 Aug 2013)

  29 Aug 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.1.1-r5.ebuild:
  Fix RPC call bounds issue.

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libvirt-1.1.1-r1.ebuild:
  Stable for x86, wrt bug #480134

*libvirt-1.1.1-r4 (23 Aug 2013)

  23 Aug 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.1.1-r4.ebuild:
  Grab the latest upstream fixes

*libvirt-1.1.1-r3 (12 Aug 2013)

  12 Aug 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.1.1-r3.ebuild,
  -libvirt-1.1.1-r2.ebuild:
  Fix build issue with glibc 2.17. bug #480472

  10 Aug 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-1.1.1-r2.ebuild:
  Add missing call to readme.gentoo eclass.

  10 Aug 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-1.1.1-r2.ebuild:
  Start using readme.gentoo

*libvirt-1.1.1-r2 (10 Aug 2013)

  10 Aug 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.1.1-r2.ebuild:
  Fix crash in remoteDomainCreateWithFlags(). Example of the crash can be seen
  with 'virsh start domain --paused'. rhbz#994855

  10 Aug 2013; Doug Goldstein <cardoe@gentoo.org>
  -files/libvirt-1.0.6-CVE-2013-2218.patch,
  -files/libvirt-1.0.6-virinterface-udev-backend-ro.patch,
  -files/libvirt-1.1.0-CVE-2013-2230.patch, -files/libvirtd.init-r11,
  -libvirt-1.1.0-r3.ebuild:
  Remove older version and older files

  10 Aug 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-1.1.1-r1.ebuild,
  libvirt-9999.ebuild:
  Fix up a few missing options from kernel feature detection.
