@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX libvirtd.confd-r4 2015 SHA256 c2ca5d9a2d4ed433e91bd215c2ca678109cc981072897a497955e36760dc3b9f SHA512 b3e1d2433be7838a35386747422a8f98f2a7f6a92a03089f9472eb8ee2efb7d10d2becd363fea7cdaf8771da31b58cd60d192b25e089b6257ad5341b1074e540 WHIRLPOOL 284e72e704b759433d5ddc1a3e4019164dda6b48cb2734ea9a6780747938bba2855a99dcf1b125ab3f500a6145315cafa4a3531ff6938c0c62e5b1a6f99ea9b3
 AUX libvirtd.init-r12 3668 SHA256 bae1b0766423b8ff879a7490a2b3e6381029638558923d8c0047414e97b881a5 SHA512 b24cf7dd0f6db454bb23bf4e9c4d40050f6d5aaa43f5b95a04238e028f1cb5c735ba605f6f01caf814f2d2a36407abc6fd1d751e66887fc7af78d543e4b61dd6 WHIRLPOOL 3c04c3acfa061144d16e1e9f2b35e37437855b0162d3ce0d7d3d39618fcfe855d8e82fdf4e16aee8d6cc591424d3d0875a32edd02646e02203b5ca239b7f5d64
@@ -7,26 +7,24 @@ DIST libvirt-1.0.5.4.tar.gz 23972364 SHA256 fe51da9d5c3d5e8521d0c89a3379ec3b1908
 DIST libvirt-1.1.1-864bcb0e.tar.xz 2108 SHA256 71bc272a7726a1a46926aca1abb8b4a8ee7f973671781e6ea4c9b29432ec9f63 SHA512 c04ec503161b03454895079cd9bbf2345ee6b489e08a7bef92c4a54237ca75a08048fed522baa759a5689735d9608f4ad3ad69ce47a630a72d5995ef955e81ab WHIRLPOOL 25ef1c2f212ab619afc0490cd613ed14a3ac80c7dafd824edc2264fc51ac092b0042d7399f9d49ab1f9411c85e10cde02ae150fb88fe81d17989b7708e3a0a6e
 DIST libvirt-1.1.1-dfae2d62.tar.xz 9104 SHA256 725f2b53547e513dbda7a26ba7410e99b81cff19df72ff6084c32d6eaaf4e603 SHA512 b5517d956b3d6f76b3b18897b9d6f90028fbed739d4ccfe0dcd3cf091f0ccdd918b297ce7eccf877bda5e32c9c701b68cd424d8c931150655cb9577552134aa7 WHIRLPOOL fd2faaeb31848e3eb37d14b61f89c8baa22746369ff45149959ff85fe0a82a01488df18e5e4dc9c76acee9512f43c3a8be775a799e2d494dd2c9305c551fc38c
 DIST libvirt-1.1.1.tar.gz 25420278 SHA256 dc6f1e1e15b9b190eaa706e76edabcfc94b239c012f5afc22b22357a4b3b22c2 SHA512 9f121827913cd99ba14ebf5755e679da5010e8784a16bc9ef9f49cfd8bf4d4335e6c200401b0592fe77a431d3de9a1b360695a515e5eb789cf675f087194cc4a WHIRLPOOL dca3fd4daebf1ba7c1d428d7a8ce7fb08b281751718fb8d7016537cbad3e08355953f1682d1239c312602b424b682d96d715085ed2e8e4ea6985140f08367093
+DIST libvirt-1.1.2.tar.gz 26069691 SHA256 16648af54d3e162f5cc5445d970ec29a0bd55b1dbcb568a05533c4c2f25965e3 SHA512 9244640221393abe3c4e48a5a5b87838af4f20ae0664949a5c116aa1dd4568818c41b52077274ade907310fd22a627bde69df1cd53c6c398d10f98f83c217b2c WHIRLPOOL 7fcf575016f26a3570fafe9fc22edc0bd35d01dfeb93a3c90d5c90770677cd07bafb3057de0857961f082c174bd42fd9a88ecb049c42a7388557ab7f51737c86
 EBUILD libvirt-1.0.5.4.ebuild 12203 SHA256 52763c34f2758614268ca4b9b69689769cc02dba5b465d4a10a914cd2706409b SHA512 7ecc6a2bdf703ee0302e376d545f7ec77abd90d95ac2db34bb39a34217a3106021c7246de8c507741845b352a4fa66e32f99a1f7c3390a027f50c68014ee58ff WHIRLPOOL 7b99823e66b400402ec332e399f0b153dda55a88bc16e2e8a6e2abbb57b878d98992177764a3474e9bf136441f82317ff17d9d58472f8dde92dd78131ffa35bf
 EBUILD libvirt-1.1.1-r1.ebuild 12210 SHA256 7d536cb24988b18f61d83b77cc6c2019e3517869a5ab7c2fdbdfb93452e7cc56 SHA512 a4c7f18afedc1e7c18dc230bc7f81bae2841e4fd39e225c955e0fa5f4d97da9df399969cd3ab5d9ed520fd7e1dabe469b67a0ce73de8fe967435d28133c82e14 WHIRLPOOL 333a115b710b6012895acea8ded7c6f6472e963ff15b917f5369f3e6eb805ae80c18f3ef6206087b8291ab4d4e8de6ccc1842c3afa6b9e0e27eac385dcd390d8
 EBUILD libvirt-1.1.1-r5.ebuild 12156 SHA256 f7b6f1663fd30fc0bcf82079777a28deaf4e74e623ac1d30ac6b89318401e9c1 SHA512 2e4a465eff68b0d25f4de8ca41238f650c4318643066a052da4ae4ab9e63cbd312e2b7352458be7a525c3d7a3f539dacb4d8769f851352801f8b365b93eed1b8 WHIRLPOOL ae83643b229026cae2a99a77e995326c3658d023059cc2944be6922cb1b8169e613783eff0e05f38158389a68106bdebc1d8a6e4fb47a4d9cdc272f9deff2eac
+EBUILD libvirt-1.1.2.ebuild 12158 SHA256 f255837b4f890cc3a4904c8d73e305871c55f2613c5caaf563c7b8294adf7723 SHA512 e604ec2f1c66960e8807c093565b07487a40eb0266fa67748b5f4dc9f1b0c76f7387d3a75e9695e160cc2507d50dfd66c920f777cbd26ec8197830b5a68c5860 WHIRLPOOL 5ef25c0096eb8e5b5678dba1fb913e1dc71fb03bf24ecdc65c54ea22dd46cea4240197d4678cef95592a8f49afdb71eac633f55bb1eb96ad3ff63af8d91916e4
 EBUILD libvirt-9999.ebuild 12212 SHA256 7eb7b50bfbd5afa1120ed7344c899e97e118a15c25e35a0bc33290b12f99c708 SHA512 6f99a6df3eb85c7430c7d8433adae8dcec79837a0205818e6d7ba0ca67ba7e05036e7250c534b88f26f9368a1dbb33c59477cbbd0cd3e5facfa9def9ba38f07f WHIRLPOOL 33790b4500d77d75dd30445e2d15a70decd75084cdcf05f7d8ddeb84cc2081e659f0e75cbf5a35a38dc7d703ebeef693a2d869ea6f8f9816dcc765e4e7be1a07
-MISC ChangeLog 11067 SHA256 326df46702d66ab0f002144211cb0cc8cbc9d6e02cc49d493b8f4bd3abf4d076 SHA512 783a1934ef1c29797cb036a55eb9dbd735064a004914636658d6cfd35643097587fe2a8dbd0947da3902a2562ac0201188c17da8a2645e3cd6fdab60cfbf1220 WHIRLPOOL 6f2fbe8624cd1e3373ebd6508b3703cdd571560d1df40af8a58b36f7acc4004358e135a620803a2e190b48173fe067eae15eb28d64e8811e369c0bdd22c44e34
+MISC ChangeLog 11189 SHA256 105a957e51b6adf563c43abbd319972f22a34feed7b50b4861730e37859e97ef SHA512 7128f2446943ff5533a488d6f7784fa7256eafe0c64e3a19e89170df4589088e70fc543fd22bda4a230d70e84eea774c617c992a17285546f26f377cc6704ca6 WHIRLPOOL 5a1af6600c761a90ae70c9477e56aeeb81db06487d891af4fc63dd0a831daa1d4ed856ba97871840fba4867501aa5f7e2c2adc036b172fc99f62c041e4ca5b50
 MISC metadata.xml 3534 SHA256 8678edfd233eaa04266d7e15f71102fb45d1e4843697ba0cd04fe57b45dbb6c6 SHA512 e4b2cc5f9001697b784034ae6e58fea39e9fdc223192772592bcb671a4e1436186ed7757fc72993ee81c1e4005502fbb8c0a2d4588666a186d42024a98c052a2 WHIRLPOOL 9f32ac2763d17e5204da7396eae2a8c79c63e1e82b4a1035c86d93c029902159d3f5697aad86b7307b6e8acee0a4f0f02023d0e5e824a471cdad80a5cebc6886
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSIcHvAAoJELp701BxlEWfHGMP/iCRocTj1uIwmWxddvZTce9R
-1b+G2YsLFfNLXaV2+N5SHPb4In59ERKuapAWV629s1L4Y3hMOH//mANfeewAbYzW
-7kXgKuav+UavAIhJTJICJ9a0lyDRUSiPaU4tkmlAl47PH4ECaNaYUbjyTlzeu3u+
-q8TuWFBZP0uDqoF0oBxHBqbvxaxlok8qCU2Ah4LS7On9u+QfdkmArzbRde9e2mO7
-GCPgs6280abAZKyrju4fBM64OlwJapFLmI1e/axaUJN6jJKmkt8Dp2U0TVyI+sQr
-bCZm0SROO/bth8PrObkKYzbNEY9MnDqpcH2UpcgoXaE5w6TPAOB7yEkYYGvwa8am
-DlyslFFv8Dk9aoEc6TwCIBjcJb2a80DVu+1bQBGCgVpGhkFRnV/N+lsCKF75wwwL
-6pTepIQBHsxXjWPOTc0sqGJggXghZ1AR9tbMER8ZtYRkzN1AqnxHccF+xN9SPu6D
-mRZaF6mY+UHOs6F067mCVvAMIJTJ4YFbKHo3R/Fy8R3zCKebVjRgPQPPw75RFKgR
-jWGFmPRlgcRUPNYJ78gPdzovwqLoYUQ7feASzBG3wmbXoQzoUSZLdos3tyZc4NKl
-mFYCJJUePIonK1CPUsS7McEOcebKV9wVzL2fxoGNZBh5+1BimgNyAO35BILVsqQC
-4bm9Ttu0hR5WVmgBpHyt
-=0NpK
+iQF8BAEBCABmBQJSJAlzXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRDMDRGNEJFMDZEQTJGRUY3NkI4MEM3NTlE
+N0RGQThEMzE4RkE5QUVGAAoJENffqNMY+prv2FEH/31LpVF+RHeet1wnhPtlOU2R
+EOhhxzg5C4yqyxNlwPuWfJyEd9Id0nEkoDOlsK285wLDU/U5zke52hZni4lBAg7e
+yh2cl1L6aytQGzNHk3hvE86AYmj43VaesjA9on3/x8aafnzaeI3ozGqqjRiw6aXc
+4bd4b+n3y9qU9K26/u9t1mOPFCA5Xsh0AisOOrp91XUVdbA2fjGU26xKprDrjAx7
+M0RaaRNBflbc2HNISYZpUTLU2/TzdgOHjrmq8oRashWI6IIbOrHlYbq20sha90F3
+F5j9C4/Gwg0znVJKkYkVsAQ32wNcPrxUCwbXq8fj9ZQBe45gmwDEK/0ODpX1Jmo=
+=ZZbs
 -----END PGP SIGNATURE-----
